tests/negative/semantic/super_field_forbidden/input.ci
structure Base {
    int x = 1;
}
structure Child : Base {
    int get() {
        return super.x;
    }
}
void main() {}
